cmake_minimum_required(VERSION 3.16)
project(LeetCode)

# set(EXECUTABLE_OUTPUT_PATH bin/)
set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Array)
add_subdirectory(Graph)
add_subdirectory(Tree)
add_subdirectory(Sort)
add_subdirectory(List)
add_subdirectory(DP)
add_subdirectory(Math)
add_subdirectory(ReCall)
add_subdirectory(Test)
add_subdirectory(Heap)
